test: :white_check_mark: add tests for ViewBooks component including mocking boilerplate
covers all scenarios as described in #SEP-10

--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -50,5 +50,8 @@
     "singleQuote": true,
     "proseWrap": "always",
     "arrowParens": "always"
+  },
+  "devDependencies": {
+    "msw": "^0.35.0"
   }
 }
