test: :white_check_mark: add some unit tests and integration tests
add some integration tests and unit tests for public user registration

--- a/BackEnd/loginmicroservices/pom.xml
+++ b/BackEnd/loginmicroservices/pom.xml
@@ -60,7 +60,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+<!--            <version>2.27.5</version>-->
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
