--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
