--- a/BackEnd/bookmicroservices/pom.xml
+++ b/BackEnd/bookmicroservices/pom.xml
@@ -8,14 +8,12 @@
         <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.rmit.sept</groupId>
-    <artifactId>bk_bookmicroservices</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>bk_bookmicroservices</name>
-    <description>bk_bookmicroservices</description>
+    <artifactId>bookmicroservices</artifactId>
+
     <properties>
         <java.version>11</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,6 +55,7 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -70,6 +69,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        </pluginManagement>
     </build>
 
 </project>
