--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -19,7 +19,11 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "jest-fetch-mock": "^3.0.3"
+  },
+  "jest": {
+  "resetMocks": false
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,4 +56,5 @@
     "proseWrap": "always",
     "arrowParens": "always"
   }
+
 }
