--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -52,6 +52,7 @@
     "arrowParens": "always"
   },
   "devDependencies": {
+    "deep-equal": "^1.1.1",
     "history": "^4.10.1",
     "msw": "^0.35.0"
   }
