--- a/BackEnd/ordermicroservices/pom.xml
+++ b/BackEnd/ordermicroservices/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
