--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -9,8 +9,15 @@ spring:
       path: /h2-console
       enabled: true
   jpa:
+    defer-datasource-initialization: true
     show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
+    database-platform: org.hibernate.dialect.H2Dialect
+  sql:
+    init:
+      mode: always
 server:
+  error:
+    include-stacktrace: always
   port: 8080
