test: :white_check_mark: Add tests for Login authentication and endpoint authorization

--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -14,3 +14,6 @@ spring:
       ddl-auto: create
 server:
   port: 8080
+  error:
+#    set this to never in production
+    include-stacktrace: on_param
