--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,15 @@ jobs:
       - checkout
       # Then run your tests!
       - run:
-          name: Generate cumulitive pom.xml checksum
+          name: Generate cumulative pom.xml checksum
           command: |
-            find . -type f -name "pom.xml" -exec sh -c "sha256sum {} >> ~/pom-checksum.tmp" \;
-            sort -o ~/pom-checksum ~/pom-checksum.tmp
+            find . -type f -name "pom.xml" -exec sh -c "sha256sum {} >> ../pom-checksum.tmp" \;
+            sort -o ../pom-checksum ../pom-checksum.tmp
           when: always
 
       - restore_cache:
           keys: 
-            - BackEnd-{{ checksum "~/pom-checksum" }}
+            - BackEnd-{{ checksum "../pom-checksum" }}
             - BackEnd-
 
       - run: mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
@@ -38,27 +38,27 @@ jobs:
       - save_cache:
           paths:
             - "~/.m2"
-          key: BackEnd-{{ checksum "~/pom-checksum" }}
+          key: BackEnd-{{ checksum "../pom-checksum" }}
 
       - run: mvn package
 
       - run:
           name: Save test results
           command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            mkdir -p ../test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ../test-results/junit/ \;
 
       - store_test_results:
-          path: ~/test-results
+          path: ../test-results
 
       - run:
           name: Save build jars
           command: |
-            mkdir -p ~/build_results/
-            find . -type f -regex ".*/target/.*jar" -exec cp {} ~/build_results/ \;
+            mkdir -p ../build_results/
+            find . -type f -regex ".*/target/.*jar" -exec cp {} ../build_results/ \;
 
       - store_artifacts:
-          path: ~/build_results/
+          path: ../build_results/
 
 
 workflows:
