--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,6 @@ jobs:
   # based on https://gist.github.com/dartov/149a1680a50c636b418119ba653a6ebb
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test-microservices:
-    working_directory: ~/BackEnd
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the Docker image tag below to openjdk version of your application.
@@ -24,41 +23,46 @@ jobs:
       - run:
           name: Generate cumulative pom.xml checksum
           command: |
-            find . -type f -name "pom.xml" -exec sh -c "sha256sum {} >> ../pom-checksum.tmp" \;
-            sort -o ../pom-checksum ../pom-checksum.tmp
+            cd BackEnd
+            find . -type f -name "pom.xml" -exec sh -c "sha256sum {} >> ~/pom-checksum.tmp" \;
+            sort -o ~/pom-checksum ~/pom-checksum.tmp
           when: always
 
       - restore_cache:
           keys: 
-            - BackEnd-{{ checksum "../pom-checksum" }}
+            - BackEnd-{{ checksum "~/pom-checksum" }}
             - BackEnd-
 
-      - run: mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+      - run:
+            name: Resolve dependencies
+            command: |
+              cd BackEnd
+              mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
 
       - save_cache:
           paths:
             - "~/.m2"
-          key: BackEnd-{{ checksum "../pom-checksum" }}
+          key: BackEnd-{{ checksum "~/pom-checksum" }}
 
       - run: mvn package
 
       - run:
           name: Save test results
           command: |
-            mkdir -p ../test-results/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ../test-results/junit/ \;
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
 
       - store_test_results:
-          path: ../test-results
+          path: ~/test-results
 
       - run:
           name: Save build jars
           command: |
-            mkdir -p ../build_results/
-            find . -type f -regex ".*/target/.*jar" -exec cp {} ../build_results/ \;
+            mkdir -p ~/build_results/
+            find . -type f -regex ".*/target/.*jar" -exec cp {} ~/build_results/ \;
 
       - store_artifacts:
-          path: ../build_results/
+          path: ~/build_results/
 
 
 workflows:
@@ -70,6 +74,6 @@ workflows:
     jobs:
       - build-and-test-microservices
       - node/test:
-          app-dir: ~/FrontEnd/bookeroo
+          app-dir: ~/FrontEnd/bookeroo/
           run-command: test
           
