fix circleci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,6 @@ workflows:
     jobs:
       - build-and-test-microservices
       - node/test:
-          app-dir: ./FrontEnd/bookeroo/
+          app-dir: ~/project/FrontEnd/bookeroo/
           run-command: test
           
