build: :white_check_mark: add report artifacts for frontend testing

--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "jest-fetch-mock": "^3.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,8 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
-    "web-vitals": "^1.1.2",
-    "jest-fetch-mock": "^3.0.3"
+    "web-vitals": "^1.1.2"
   },
   "jest": {
     "resetMocks": false
@@ -28,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --watchAll=false --testResultsProcessor ./node_modules/jest-junit",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,6 +59,7 @@
   "devDependencies": {
     "deep-equal": "^1.1.1",
     "history": "^4.10.1",
+    "jest-junit": "^12.2.0",
     "msw": "^0.35.0"
   }
 }
