adding diffrent way of initalizing users, with adding UserInitializer, now password gets decrypted for the databse, so that login works

--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -9,14 +9,14 @@ spring:
       path: /h2-console
       enabled: true
   jpa:
-    defer-datasource-initialization: true
+#    defer-datasource-initialization: true
     show-sql: false
     hibernate:
       ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 server:
   error:
     include-stacktrace: always
