--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 
 #macos
 .DS_Store
+
+# PACKAGE_LOCK (should only be committed for libraries)
 FrontEnd/bookeroo/package-lock.json
 FrontEnd/myfirstapp/package-lock.json
 FrontEnd/bookeroo/package-lock.json
 FrontEnd/bookeroo/package-lock.json~feature-sep-15
+FrontEnd/bookeroo/junit.xml
