--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,27 @@ jobs:
 
       - store_artifacts:
           path: ~/build_results/
-
+  build-and-test-frontend:
+    working_directory: ~/project/FrontEnd/bookeroo
+    # Reuse Docker container specification given by the node Orb
+    executor: node/default
+    steps:
+      - checkout
+      # Install the latest npm - the node Orb takes care of it
+      - node/install-npm
+      - node/install-packages:
+          app-dir: ~/project/FrontEnd/bookeroo
+          cache-version: v1
+          cache-path: node_modules
+      - run:
+          command: npm run test
+          name: Test frontend
+      - store_test_results:
+          path: junit.xml
+      - run:
+          command: npm run build
+      - store_artifacts:
+          path: build/
 
 workflows:
   # Below is the definition of your workflow.
@@ -77,7 +97,4 @@ workflows:
   build_and_test_project: 
     jobs:
       - build-and-test-microservices
-      - node/test:
-          app-dir: ~/project/FrontEnd/bookeroo/
-          run-command: test
-          cache-version: v2
+      - build-and-test-frontend
