--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
   build-and-test-frontend:
     # Use container with node and npm installed
     docker:
-      - image: cimg/node:16.9.1
+      - image: circleci/node:16
     steps:
     # checkout the code
       - checkout
