--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@
 .DS_Store
 
 FrontEnd/myfirstapp/package-lock.json
+FrontEnd/bookeroo/package-lock.json
 FrontEnd/bookeroo/package-lock.json~feature-sep-15
 FrontEnd/bookeroo/junit.xml
