--- a/BackEnd/bookmicroservices/pom.xml
+++ b/BackEnd/bookmicroservices/pom.xml
@@ -94,14 +94,15 @@
     </dependencies>
 
 
-
     <build>
         <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <configuration>
+                    <forkCount>0</forkCount>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
