build: :construction_worker: add/update config and scripts for container developent and container deployment to aws

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ FrontEnd/myfirstapp/package-lock.json
 FrontEnd/bookeroo/package-lock.json
 FrontEnd/bookeroo/package-lock.json~feature-sep-15
 FrontEnd/bookeroo/junit.xml
+
+.env
