--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -22,33 +22,21 @@
                     <groupId>de.qaware.maven</groupId>
                     <artifactId>go-offline-maven-plugin</artifactId>
                     <version>1.2.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
-                        <dynamicDependencies>
-                            <DynamicDependency>
-                                <groupId>org.apache.maven.surefire</groupId>
-                                <artifactId>surefire-junit4</artifactId>
-                                <version>2.20.1</version>
-                                <repositoryType>PLUGIN</repositoryType>
-                            </DynamicDependency>
-                            <DynamicDependency>
-                                <groupId>com.querydsl</groupId>
-                                <artifactId>querydsl-apt</artifactId>
-                                <version>4.2.1</version>
-                                <classifier>jpa</classifier>
-                                <repositoryType>MAIN</repositoryType>
-                            </DynamicDependency>
-                            <DynamicDependency>
-                                <groupId>org.flywaydb</groupId>
-                                <artifactId>flyway-commandline</artifactId>
-                                <version>4.0.3</version>
-                                <type>zip</type>
-                                <repositoryType>MAIN</repositoryType>
-                            </DynamicDependency>
-                        </dynamicDependencies>
+                        <mainClass>com.rmit.sept.bk_bookmicroservices.MsBooks</mainClass>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
-	
 </project>
