--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,8 @@ workflows:
       - build-and-test-microservices
       - aws-ecr/build-and-push-image:
           repo: "sep-mon-g4"
-          tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},${CIRCLE_BRANCH}_latest"
+          create-repo: true
+          tag: "${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
           attach-workspace: true
           path: BackEnd/loginmicroservices
           requires:
