--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ workflows:
       # - build-and-test-frontend
       - build-and-test-microservices
       - aws-ecr/build-and-push-image:
-          repo: "sep-mon-g4"
+          repo: sep-mon-g4
           create-repo: true
           tag: "${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
           attach-workspace: true
