--- a/BackEnd/bookmicroservices/Dockerfile
+++ b/BackEnd/bookmicroservices/Dockerfile
@@ -1,8 +1,7 @@
 FROM adoptopenjdk/openjdk11:alpine
 ENV APP_FILE bookmicroservices-2.5.4.jar
 ENV APP_HOME /usr/apps
-EXPOSE 8081
-EXPOSE 3306
+EXPOSE $SERVER_PORT
 COPY target/$APP_FILE $APP_HOME/
 WORKDIR $APP_HOME
 ENTRYPOINT ["sh", "-c"]
