--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,9 +131,10 @@ workflows:
       # - build-and-test-frontend
       - build-and-test-microservices
       - aws-ecr/build-and-push-image:
+          name: login-ms-build-and-push-image
           repo: sep-mon-g4
           create-repo: true
-          tag: "${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
+          tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
           attach-workspace: true
           path: BackEnd/loginmicroservices
           requires:
@@ -146,7 +147,7 @@ workflows:
       - aws-ecs/deploy-service-update:
           name: login-ms-update-deploy-development
           requires:
-            - aws-ecr/build-and-push-image 
+            - login-ms-build-and-push-image
           family: "CICDec2task"
           cluster-name: "CICDcluster"
           service-name: "login_ms_develop"
@@ -155,3 +156,29 @@ workflows:
             branches:
               only:
                 - develop
+      - aws-ecr/build-and-push-image:
+          name: book-ms-build-and-push-image
+          repo: sep-mon-g4
+          create-repo: true
+          tag: "book_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},book_ms_${CIRCLE_BRANCH}_latest"
+          attach-workspace: true
+          path: BackEnd/bookmicroservices
+          requires:
+            - build-and-test-microservices
+          filters:
+            branches:
+              only:
+                - main
+                - develop
+      # - aws-ecs/deploy-service-update:
+      #     name: book-ms-update-deploy-development
+      #     requires:
+      #       - book-ms-build-and-push-image
+      #     family: "book_ms_develop"
+      #     cluster-name: "CICDcluster"
+      #     service-name: "book_ms_develop_service"
+      #     container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
