BackEnd implementation of user update + user suspension(locked/unlocked)

--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -17,6 +17,9 @@ spring:
 #  sql:
 #    init:
 #      mode: always
+  devtools:
+    livereload:
+      port: 35730
 server:
 #  error:
 #    include-stacktrace: always
