--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 orbs:
   aws-ecr: circleci/aws-ecr@7.2.0
   aws-ecs: circleci/aws-ecs@2.2.1
+  aws-cli: circleci/aws-cli@2.0.3
 
 jobs:
   # based on https://discuss.circleci.com/t/maven-multi-module-project-reactor-install-goal-does-not-see-dependencies-that-have-been-built-a-while-ago/29051/2
@@ -28,23 +29,19 @@ jobs:
             find . -type f -name "pom.xml" -exec sh -c "sha256sum {} >> ~/pom-checksum.tmp" \;
             sort -o ~/pom-checksum ~/pom-checksum.tmp
           when: always
-
       - restore_cache:
           keys: 
             - BackEnd-{{ checksum "~/pom-checksum" }}
             - BackEnd-
-
       - run:
           name: Resolve submodule maven dependencies
           command: |
             cd BackEnd
             mvn de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
-
       - save_cache:
           paths:
             - "~/.m2"
           key: BackEnd-{{ checksum "~/pom-checksum" }}
-
       # - run:
       #     name: Test microservices
       #     command: |
@@ -53,16 +50,13 @@ jobs:
       #       find . -type f -regex ".*/src/main/resources/application.yaml" -exec cp test_application.yaml {} \;
       #       # run tests
       #       mvn test
-
       # - run:
       #     name: Save test results
       #     command: |
       #       mkdir -p ~/test-results/junit/
       #       find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-
       # - store_test_results:
       #     path: ~/test-results
-
       - run:
           name: Build repackaged jars
           command: |
@@ -73,53 +67,61 @@ jobs:
             mvn package spring-boot:repackage -Dmaven.test.skip
             mkdir -p ~/build_results/
             find . -type f -regex ".*/target/.*jar" -exec cp {} ~/build_results/ \;
-
       # - store_artifacts:
       #     path: ~/build_results/
-
       - persist_to_workspace:
           root: .
           paths:
             - BackEnd/bookmicroservices/target
             - BackEnd/loginmicroservices/target
 
-  build-and-test-frontend:
+  test-frontend:
     # Use container with node and npm installed
     docker:
       - image: cimg/node:lts
     steps:
     # checkout the code
       - checkout
-
       - restore_cache:
           key: dependency-cache-{{ checksum "~/project/FrontEnd/bookeroo/package.json" }}
-
-    # installs dependencies and validate lock file against packge.json
+    # installs dependencies
       - run:
           name: Resolve FrontEnd node dependencies
           command: |
             cd FrontEnd/bookeroo
             npm install --no-optional
-
     # save node_modules
       - save_cache:
           key: dependency-cache-{{ checksum "~/project/FrontEnd/bookeroo/package.json" }}
           paths:
             - ~/project/FrontEnd/bookeroo/node_modules
-
     # run tests
       - run:
           command: cd ~/project/FrontEnd/bookeroo && CI=true && npm run test:ci
           name: Test frontend
       - store_test_results:
           path: ~/project/FrontEnd/bookeroo/junit.xml
+      - persist-to-workspace:
+          root: .
+          paths:
+            - FrontEnd/bookeroo/
 
-    # run build
+  deploy-frontend-develop:
+      # Use container with node and npm installed
+    docker:
+      - image: cimg/node:lts
+    steps:
+    # checkout the code
+      - checkout
+    #install aws-cli
+      - aws-cli/install
+    # restore npm install from test-frontend job
+      - attach_workspace:
+          at: .
+    # run build and deploy to aws
       - run:
-          command: cd ~/project/FrontEnd/bookeroo && npm run build  
-      - store_artifacts:
-          path: ~/project/FrontEnd/bookeroo/build/
-
+          command: |
+            ./scripts/deploy.sh "${DEVELOP_S3_BUCKET}" "${DEVELOP_CF_DISTRIBUTION_ID}"
 
 workflows:
   # Below is the definition of your workflow.
@@ -128,8 +130,16 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   build_and_test_project: 
     jobs:
-      # - build-and-test-frontend
+      - test-frontend
+      - deploy-frontend-develop:
+          requires:
+            - test-frontend
+          filters:
+            branches:
+              only:
+                - develop
       - build-and-test-microservices
+
       - aws-ecr/build-and-push-image:
           name: login-ms-build-and-push-image
           repo: sep-mon-g4
@@ -148,14 +158,15 @@ workflows:
           name: login-ms-update-deploy-development
           requires:
             - login-ms-build-and-push-image
-          family: "CICDec2task"
+          family: "login_ms_develop"
           cluster-name: "CICDcluster"
-          service-name: "login_ms_develop"
-          container-image-name-updates: "container=DevelopmentBookMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
+          service-name: "login_ms_develop_LB"
+          container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
           filters:
             branches:
               only:
                 - develop
+
       - aws-ecr/build-and-push-image:
           name: book-ms-build-and-push-image
           repo: sep-mon-g4
