--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ jobs:
     # run build and deploy to aws
       - run:
           command: |
-            ./scripts/deploy.sh "${DEVELOP_S3_BUCKET}" "${DEVELOP_CF_DISTRIBUTION_ID}"
+            ./scripts/deploy_frontend.sh "${DEVELOP_S3_BUCKET}" "${DEVELOP_CF_DISTRIBUTION_ID}"
 
 workflows:
   # Below is the definition of your workflow.
@@ -138,58 +138,59 @@ workflows:
             branches:
               only:
                 - develop
-      - build-and-test-microservices
 
-      - aws-ecr/build-and-push-image:
-          name: login-ms-build-and-push-image
-          repo: sep-mon-g4
-          create-repo: true
-          tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
-          attach-workspace: true
-          path: BackEnd/loginmicroservices
-          requires:
-            - build-and-test-microservices
-          filters:
-            branches:
-              only:
-                - main
-                - develop
-      - aws-ecs/deploy-service-update:
-          name: login-ms-update-deploy-development
-          requires:
-            - login-ms-build-and-push-image
-          family: "login_ms_develop"
-          cluster-name: "CICDcluster"
-          service-name: "login_ms_develop_LB"
-          container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
-          filters:
-            branches:
-              only:
-                - develop
+      # - build-and-test-microservices
 
-      - aws-ecr/build-and-push-image:
-          name: book-ms-build-and-push-image
-          repo: sep-mon-g4
-          create-repo: true
-          tag: "book_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},book_ms_${CIRCLE_BRANCH}_latest"
-          attach-workspace: true
-          path: BackEnd/bookmicroservices
-          requires:
-            - build-and-test-microservices
-          filters:
-            branches:
-              only:
-                - main
-                - develop
-      - aws-ecs/deploy-service-update:
-          name: book-ms-update-deploy-development
-          requires:
-            - book-ms-build-and-push-image
-          family: "book_ms_develop"
-          cluster-name: "CICDcluster"
-          service-name: "book_ms_develop_service"
-          container-image-name-updates: "container=DevelopmentBookMicroservice,tag=book_ms_${CIRCLE_BRANCH}_latest"
-          filters:
-            branches:
-              only:
-                - develop
+      # - aws-ecr/build-and-push-image:
+      #     name: login-ms-build-and-push-image
+      #     repo: sep-mon-g4
+      #     create-repo: true
+      #     tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
+      #     attach-workspace: true
+      #     path: BackEnd/loginmicroservices
+      #     requires:
+      #       - build-and-test-microservices
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - develop
+      # - aws-ecs/deploy-service-update:
+      #     name: login-ms-update-deploy-development
+      #     requires:
+      #       - login-ms-build-and-push-image
+      #     family: "login_ms_develop"
+      #     cluster-name: "CICDcluster"
+      #     service-name: "login_ms_develop_LB"
+      #     container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+
+      # - aws-ecr/build-and-push-image:
+      #     name: book-ms-build-and-push-image
+      #     repo: sep-mon-g4
+      #     create-repo: true
+      #     tag: "book_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},book_ms_${CIRCLE_BRANCH}_latest"
+      #     attach-workspace: true
+      #     path: BackEnd/bookmicroservices
+      #     requires:
+      #       - build-and-test-microservices
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - develop
+      # - aws-ecs/deploy-service-update:
+      #     name: book-ms-update-deploy-development
+      #     requires:
+      #       - book-ms-build-and-push-image
+      #     family: "book_ms_develop"
+      #     cluster-name: "CICDcluster"
+      #     service-name: "book_ms_develop_service"
+      #     container-image-name-updates: "container=DevelopmentBookMicroservice,tag=book_ms_${CIRCLE_BRANCH}_latest"
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
