--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ workflows:
             - book-ms-build-and-push-image
           family: "book_ms_develop"
           cluster-name: "CICDcluster"
-          service-name: "book_ms_develop_service"
+          service-name: "book_ms_develop_LB"
           container-image-name-updates: "container=DevelopmentBookMicroservice,tag=book_ms_${CIRCLE_BRANCH}_latest"
           filters:
             branches:
