--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,21 +42,21 @@ jobs:
           paths:
             - "~/.m2"
           key: BackEnd-{{ checksum "~/pom-checksum" }}
-      # - run:
-      #     name: Test microservices
-      #     command: |
-      #       cd BackEnd
-      #       # replace application.yaml with test_application.yaml
-      #       find . -type f -regex ".*/src/main/resources/application.yaml" -exec cp test_application.yaml {} \;
-      #       # run tests
-      #       mvn test
-      # - run:
-      #     name: Save test results
-      #     command: |
-      #       mkdir -p ~/test-results/junit/
-      #       find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-      # - store_test_results:
-      #     path: ~/test-results
+      - run:
+          name: Test microservices
+          command: |
+            cd BackEnd
+            # replace application.yaml with test_application.yaml
+            find . -type f -regex ".*/src/main/resources/application.yaml" -exec cp test_application.yaml {} \;
+            # run tests
+            mvn test
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+      - store_test_results:
+          path: ~/test-results
       - run:
           name: Build repackaged jars
           command: |
@@ -113,7 +113,7 @@ jobs:
     steps:
     # checkout the code
       - checkout
-    #install aws-cli
+    # cli for updating s3/cloudfront
       - aws-cli/install
     # restore npm install from test-frontend job
       - attach_workspace:
@@ -124,10 +124,6 @@ jobs:
             bash ./scripts/deploy_frontend.sh "${DEVELOP_S3_BUCKET}" "${DEVELOP_CF_DISTRIBUTION_ID}"
 
 workflows:
-  # Below is the definition of your workflow.
-  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
-  # CircleCI will run this workflow on every commit.
-  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   build_and_test_project: 
     jobs:
       - test-frontend
@@ -139,58 +135,58 @@ workflows:
               only:
                 - develop
 
-      # - build-and-test-microservices
+      - build-and-test-microservices
 
-      # - aws-ecr/build-and-push-image:
-      #     name: login-ms-build-and-push-image
-      #     repo: sep-mon-g4
-      #     create-repo: true
-      #     tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
-      #     attach-workspace: true
-      #     path: BackEnd/loginmicroservices
-      #     requires:
-      #       - build-and-test-microservices
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      #           - develop
-      # - aws-ecs/deploy-service-update:
-      #     name: login-ms-update-deploy-development
-      #     requires:
-      #       - login-ms-build-and-push-image
-      #     family: "login_ms_develop"
-      #     cluster-name: "CICDcluster"
-      #     service-name: "login_ms_develop_LB"
-      #     container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
+      - aws-ecr/build-and-push-image:
+          name: login-ms-build-and-push-image
+          repo: sep-mon-g4
+          create-repo: true
+          tag: "login_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},login_ms_${CIRCLE_BRANCH}_latest"
+          attach-workspace: true
+          path: BackEnd/loginmicroservices
+          requires:
+            - build-and-test-microservices
+          filters:
+            branches:
+              only:
+                - main
+                - develop
+      - aws-ecs/deploy-service-update:
+          name: login-ms-update-deploy-development
+          requires:
+            - login-ms-build-and-push-image
+          family: "login_ms_develop"
+          cluster-name: "CICDcluster"
+          service-name: "login_ms_develop_LB"
+          container-image-name-updates: "container=DevelopmentLoginMicroservice,tag=login_ms_${CIRCLE_BRANCH}_latest"
+          filters:
+            branches:
+              only:
+                - develop
 
-      # - aws-ecr/build-and-push-image:
-      #     name: book-ms-build-and-push-image
-      #     repo: sep-mon-g4
-      #     create-repo: true
-      #     tag: "book_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},book_ms_${CIRCLE_BRANCH}_latest"
-      #     attach-workspace: true
-      #     path: BackEnd/bookmicroservices
-      #     requires:
-      #       - build-and-test-microservices
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      #           - develop
-      # - aws-ecs/deploy-service-update:
-      #     name: book-ms-update-deploy-development
-      #     requires:
-      #       - book-ms-build-and-push-image
-      #     family: "book_ms_develop"
-      #     cluster-name: "CICDcluster"
-      #     service-name: "book_ms_develop_service"
-      #     container-image-name-updates: "container=DevelopmentBookMicroservice,tag=book_ms_${CIRCLE_BRANCH}_latest"
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
+      - aws-ecr/build-and-push-image:
+          name: book-ms-build-and-push-image
+          repo: sep-mon-g4
+          create-repo: true
+          tag: "book_ms_${CIRCLE_BRANCH}_${CIRCLE_SHA1},book_ms_${CIRCLE_BRANCH}_latest"
+          attach-workspace: true
+          path: BackEnd/bookmicroservices
+          requires:
+            - build-and-test-microservices
+          filters:
+            branches:
+              only:
+                - main
+                - develop
+      - aws-ecs/deploy-service-update:
+          name: book-ms-update-deploy-development
+          requires:
+            - book-ms-build-and-push-image
+          family: "book_ms_develop"
+          cluster-name: "CICDcluster"
+          service-name: "book_ms_develop_LB"
+          container-image-name-updates: "container=DevelopmentBookMicroservice,tag=book_ms_${CIRCLE_BRANCH}_latest"
+          filters:
+            branches:
+              only:
+                - develop
