--- a/BackEnd/ordermicroservices/src/main/resources/application.yaml
+++ b/BackEnd/ordermicroservices/src/main/resources/application.yaml
@@ -1,12 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:file:~/order_db
+    url: jdbc:h2:file:~/order_db;AUTO_SERVER=TRUE
     username: sa
     password:
     driver-class-name: org.h2.Driver
     name: db_orders
-  hibernate:
-    dialect:
   h2:
     console:
       path: /h2-console
