--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -9,11 +9,10 @@ spring:
       path: /h2-console
       enabled: true
   jpa:
-<<<<<<< HEAD
 #    defer-datasource-initialization: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
 #  sql:
 #    init:
