--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -61,6 +61,7 @@
     "deep-equal": "^1.1.1",
     "history": "^4.10.1",
     "jest-junit": "^12.2.0",
-    "msw": "^0.35.0"
+    "msw": "^0.35.0",
+    "unique-names-generator": "^4.6.0"
   }
 }
