--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-react-grid": "^4.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
