docs: :white_check_mark: Add test reports

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ FrontEnd/bookeroo/package-lock.json
 FrontEnd/bookeroo/package-lock.json~feature-sep-15
 FrontEnd/bookeroo/junit.xml
 
+logs
+
 .env
 
 .project
