Revert "Merge pull request #21 from Someoneamzing/SEP-75-list-books-jh0l"
This reverts commit c55d35b7e3f438005289a072cf3bf544b7a5ce1a, reversing
changes made to ffcf1f97d0c663698aab6ce44fda02edf8b6ba67.

--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -9,24 +9,10 @@ spring:
       path: /h2-console
       enabled: true
   jpa:
-#    defer-datasource-initialization: true
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
-    database-platform: org.hibernate.dialect.H2Dialect
-#  sql:
-#    init:
-#      mode: always
-  devtools:
-    livereload:
-      port: 35730
-
+      ddl-auto: update
 server:
-#  error:
-#    include-stacktrace: always
   port: 8080
   error:
-    include-message: always
-    include-binding-errors: always
-#    set this to never in production
     include-stacktrace: always
