--- a/FrontEnd/bookeroo/package.json
+++ b/FrontEnd/bookeroo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookeroo",
-  "version": "0.1.2-alpha.1",
+  "version": "0.2.2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
